--- a/elements/trello-board.html
+++ b/elements/trello-board.html
@@ -33,6 +33,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
 	<div class="input_container">
 	<span>Bem vindo ao</span><span class="blueText"> RelaTrello</span>
+  <div>Torne seu quadro público e insira a sua URL adicionando ".json"</div>
   		<paper-input label="MeuQuadroURL.json" value="{{quadroURL}}"></paper-input>
 	</div>
 
