modal dialog inserted

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
 
-  <title>Polymer Chat Demo App</title>
+  <title>RelaTrello</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
