--- a/elements/trello-board.html
+++ b/elements/trello-board.html
@@ -16,8 +16,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
  <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
 
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script src="https://api.trello.com/1/client.js?key=[5aab1a1d07101f5486de78243e3b309131f89109e4ccc72b1f1311f82b0c7e46]"></script>
+<script src="../js/jquery-1.7.1.min.js"></script>
+<script src="https://api.trello.com/1/client.js?key=[7041ac84049dc623f980b14c3d01c358]"></script>
 
 <link rel="import" href="trello-cards.html">
 
