Authenticaçao falha. Comentando o botao de authenticar

--- a/elements/trello-board.html
+++ b/elements/trello-board.html
@@ -61,7 +61,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <paper-item> <div class="size19">3. Relatório pronto??</div></paper-item>
     <paper-item><div class="size19">4. Selecione tudo (ctrl+a), copie (ctrl+c), cole (ctrl+v) onde você desejar e seja feliz com seu relatório!</div></paper-item>
 
-    <paper-button on-tap="authenticateUser">authenticate</paper-button>
+    <!-- <paper-button on-tap="authenticateUser">authenticate</paper-button> -->
     </div>
   </paper-dialog> 
 
