--- a/elements/trello-board.html
+++ b/elements/trello-board.html
@@ -56,10 +56,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div sizingTarget>
     <div class="centered size26"><span>Bem-vindo ao</span><span class="blueText"> RelaTrello</span></div>
     <br>
-    <paper-item><span class="size19">1. Certifique-se de que o seu quadro é: </span><span></span><span class="size19 bold"> PÚBLICO</span></paper-item>
+    <paper-item><span class="size19">1. Certifique-se de que o seu quadro está como: </span><span></span><span class="size19 bold"> PÚBLICO</span></paper-item>
     <paper-item><div class="size19">2. Insira a URL do seu quadro e adicione .json ao final</div></paper-item>
     <paper-item> <div class="size19">3. Relatório pronto??</div></paper-item>
-    <paper-item><div class="size19">4. Selecione tudo (ctrl+a), copie (ctrl+c), cole (ctrl+v) onde você desejar e seja feliz com seu relatório!</div></paper-item>
+    <paper-item><div class="size19">4. Selecione tudo (ctrl+a), copie (ctrl+c), cole (ctrl+v) onde você desejar!</div></paper-item>
 
     <!-- <paper-button on-tap="authenticateUser">authenticate</paper-button> -->
     </div>
