--- a/elements/trello-board.html
+++ b/elements/trello-board.html
@@ -58,8 +58,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <br>
     <paper-item><span class="size19">1. Certifique-se de que o seu quadro está como: </span><span></span><span class="size19 bold"> PÚBLICO</span></paper-item>
     <paper-item><div class="size19">2. Insira a URL do seu quadro e adicione .json ao final</div></paper-item>
-    <paper-item> <div class="size19">3. Relatório pronto??</div></paper-item>
-    <paper-item><div class="size19">4. Selecione tudo (ctrl+a), copie (ctrl+c), cole (ctrl+v) onde você desejar!</div></paper-item>
+    <paper-item> <div class="size19">3. Relatório pronto?? Copie e cole onde desejar</div></paper-item>
+    <paper-item><div class="size19">4. Retorne seu quadro para particular</div></paper-item>
 
     <!-- <paper-button on-tap="authenticateUser">authenticate</paper-button> -->
     </div>
