Colocando o input para dentro do dialogo modal

--- a/elements/trello-board.html
+++ b/elements/trello-board.html
@@ -33,9 +33,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color: white;
     }
     .input_container {
+    	width: 100%;
+    	margin-top: -20px;
+    }
+    .title_container {
     	width: 70%;
     	margin-left: 30px;
     	margin-top: 20px;
+    }
+    .button-dialog {
+    	margin-top: -2px;
+    	margin-left: 40%;
+    }
+    .dialog {
+    	width: 900px;
     }
     .blueText {
     	color: blue;
@@ -52,22 +63,30 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </style>
 
   <template>
-  <paper-dialog autoFitOnAttach id="dialog" entry-animation="scale-up-animation" exit-animation="fade-out-animation">
+  <paper-dialog id="dialog" class="dialog" modal entry-animation="scale-up-animation" exit-animation="fade-out-animation">
     <div sizingTarget>
     <div class="centered size26"><span>Bem-vindo ao</span><span class="blueText"> RelaTrello</span></div>
     <br>
     <paper-item><span class="size19">1. Certifique-se de que o seu quadro está como: </span><span></span><span class="size19 bold"> PÚBLICO</span></paper-item>
-    <paper-item><div class="size19">2. Insira a URL do seu quadro e adicione .json ao final</div></paper-item>
+    <paper-item>
+    	<div class="size19">2. Insira abaixo a URL do seu quadro e adicione .json ao final</div>
+    </paper-item>
+    <paper-item>
+	    <div class="input_container">
+			<paper-input label="MeuQuadroURL.json" value="{{quadroURL}}"></paper-input>
+		</div>
+    </paper-item>
     <paper-item> <div class="size19">3. Relatório pronto?? Copie e cole onde desejar</div></paper-item>
     <paper-item><div class="size19">4. Retorne seu quadro para particular</div></paper-item>
 
     <!-- <paper-button on-tap="authenticateUser">authenticate</paper-button> -->
     </div>
+    <div class="button-dialog">
+    <paper-button dialog-confirm>Ok</paper-button>
+  </div>
   </paper-dialog> 
-
-	<div class="input_container">
-	<span class="blueText size26">RelaTrello</span>
-  		<paper-input label="MeuQuadroURL.json" value="{{quadroURL}}"></paper-input>
+	<div class="title_container">
+		<span class="blueText size26">RelaTrello</span>
 	</div>
 
     <iron-ajax url="{{quadroURL}}" last-response="{{threads}}" auto></iron-ajax>
