--- a/elements/trello-board.html
+++ b/elements/trello-board.html
@@ -77,7 +77,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </style>
 
   <template id="tmpl">
-  <!-- <paper-dialog id="dialog" class="dialog" modal entry-animation="scale-up-animation" exit-animation="fade-out-animation">
+  <paper-dialog id="dialog" class="dialog" modal entry-animation="scale-up-animation" exit-animation="fade-out-animation">
     <div sizingTarget>
     <div class="centered size26"><span>Bem-vindo ao</span><span class="blueText"> RelaTrello</span></div>
     <br>
@@ -91,21 +91,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		</div>
     </paper-item>
     <paper-item> <div class="size19">3. Relatório pronto?? Copie e cole onde desejar</div></paper-item>
-    <paper-item><div class="size19">4. Retorne seu quadro para particular</div></paper-item> -->
+    <paper-item><div class="size19">4. Retorne seu quadro para particular</div></paper-item>
 
-    <!-- <paper-button on-tap="authenticateUser">authenticate</paper-button> -->
-    <!-- </div>
+    </div>
     <div class="button-dialog">
     <paper-button dialog-confirm on-click="changeIndex">Ok</paper-button>
   </div>
-  </paper-dialog>  -->
+  </paper-dialog> 
 	<div class="title_container">
 		<span class="blueText size14">RelaTrello</span>
 	</div>
 	<!-- <paper-button on-tap="casca">CASCA</paper-button> -->
 
-    <!-- <iron-ajax url="{{quadroURL}}" last-response="{{threads}}" auto></iron-ajax> -->
-    <iron-ajax url="https://trello.com/b/okOTMvJF/proj-matrix-vt-interface-web-de-dp-thiago-e-victor.json" last-response="{{threads}}" auto></iron-ajax>
+    <iron-ajax url="{{quadroURL}}" last-response="{{threads}}" auto></iron-ajax>
+    <!-- <iron-ajax url="https://trello.com/b/okOTMvJF/proj-matrix-vt-interface-web-de-dp-thiago-e-victor.json" last-response="{{threads}}" auto></iron-ajax> -->
 
     <div class="centered size26 bold">Projeto Matrix-UG – Itaipu</div>
     <br>
@@ -137,8 +136,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       ready: function() {
-        // var dialog = document.querySelector('#dialog');
-        // dialog.open();
+        var dialog = document.querySelector('#dialog');
+        dialog.open();
       },
 
       casca: function() {
@@ -154,12 +153,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         };
       },
 
-      //   _handleInput: function(e) {
-      //   if (e.keyCode == 13) {
-      //     var dialog = document.querySelector('#dialog');
-      //     dialog.close();
-      //   }
-      // }
+        _handleInput: function(e) {
+        if (e.keyCode == 13) {
+          var dialog = document.querySelector('#dialog');
+          dialog.close();
+        }
+      }
 
     });
   </script>
