--- a/elements/trello-cards.html
+++ b/elements/trello-cards.html
@@ -146,11 +146,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <li>
       <div class="size11">{{item.name}}</div>
     </li>
-        <div class="container">
+        <!-- <div class="container">
           <template is="dom-repeat" items="{{item.labels}}">
             <div class$="{{item.color}}">{{item.name}}</div>
           </template>
-        </div>
+        </div> -->
       <div>
       <template is="dom-repeat" items="{{item.attachments}}">
         <img class="pic" src="{{item.url}}">
