inserindo index certo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  
 
 
   <title>RelaTrello</title>
@@ -10,7 +11,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="import" href="elements/trello-board.html">
+  <link rel="import" href="elements/trello-dialog.html">
 
   <style>
     body {
@@ -30,7 +31,10 @@
 </head>
 <body>
 
-  <trello-board></trello-board>
+  <trello-dialog></trello-dialog>
 
+<script>
+
+</script>
 </body>
 </html>
