desabilitando listas e cartoes

--- a/elements/trello-dialog.html
+++ b/elements/trello-dialog.html
@@ -95,8 +95,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     	<div class="size19">2. Selecione o que deseja gerar no relatório</div>
     </paper-item>
     <paper-item style="margin-left: -12px;">
-    	<paper-checkbox id="listsCheck" checked style="margin-right: 17px;">Listas</paper-checkbox>
-    	<paper-checkbox id="cardsCheck" checked>Cartões</paper-checkbox>
+    	<paper-checkbox id="listsCheck" checked disabled style="margin-right: 17px;">Listas</paper-checkbox>
+    	<paper-checkbox id="cardsCheck" checked disabled>Cartões</paper-checkbox>
     	<paper-checkbox id="dateCheck">Data</paper-checkbox>
     	<paper-checkbox id="descCheck">Descrição</paper-checkbox>
     	<paper-checkbox id="commentsCheck">Comentários</paper-checkbox>
