adicionando incone na aba do browser

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   
-
+  <link rel="icon" sizes="192x192" href="img/touch/House-and-Appliances-Tv-icon.png">
+  <link rel="apple-touch-icon" href="img/touch/House-and-Appliances-Tv-icon.png">
 
   <title>RelaTrello</title>
 
